# FastAPI_Kafka

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
src/: main.py
src/consumer/: config.py  consumer.py  handlers.py
src/data/: config.py  database.py
src/models/: __init__.py  models.py
src/schemas/: __init__.py  author.py  book.py  tag.py
src/services/: author.py  book.py  crud.py  tag.py
src/web/: author.py  book.py  tag.py
